--- a/chapter-1.org
+++ b/chapter-1.org
@@ -1,9 +1,5 @@
-#+title: Chapter 1 Exercises
-#+property: header-args :session :results value
-
-#+begin_src scheme
-(use-modules (sicp-test))
-#+end_src
+#+TITLE: Chapter 1 Exercises
+#+PROPERTY: header-args :session :results output
 
 * Exercise 1.1
 Below is a sequence of expressions. What is the result printed by the interpreter in response to each expression? Assume that the sequence is to be evaluated in the order in which it is presented.
@@ -48,9 +44,6 @@ Below is a sequence of expressions. What is the result printed by the interprete
   16
 #+end_src
 
-#+RESULTS:
-: 16
-
 * Exercise 1.2
 Translate the following expression into prefix form:
     5 + 4 + (2 − (3 − (6 + 4/5)))
@@ -65,13 +58,12 @@ Translate the following expression into prefix form:
 #+end_src
 
 #+RESULTS:
-: -37/150
 
 * Exercise 1.3
 Define a procedure that takes three numbers as arguments and returns the sum of the squares of the two larger numbers.
 
 ** Solution
-#+begin_src scheme :session :results output
+#+begin_src scheme
 (define (weird-sum-of-squares a b c)
   (define x (if (> a b) a b))
   (define y (cond
@@ -80,20 +72,21 @@ Define a procedure that takes three numbers as arguments and returns the sum of 
              (else b)))
   (+ (* x x) (* y y)))
 
-(assert
- (=
-  25
-  (weird-sum-of-squares 2 3 4)
-  (weird-sum-of-squares 2 4 3)
-  (weird-sum-of-squares 3 2 4)
-  (weird-sum-of-squares 3 4 2)
-  (weird-sum-of-squares 4 2 3)
-  (weird-sum-of-squares 4 3 2)))
-(display "Ok!")
+(test-begin "1.3 sum-of-squares")
+(test-assert
+    (=
+     25
+     (weird-sum-of-squares 2 3 4)
+     (weird-sum-of-squares 2 4 3)
+     (weird-sum-of-squares 3 2 4)
+     (weird-sum-of-squares 3 4 2)
+     (weird-sum-of-squares 4 2 3)
+     (weird-sum-of-squares 4 3 2)))
+(test-end)
 #+end_src
 
 #+RESULTS:
-: Ok!
+:  Ok: 1 tests passed.
 
 
 * Exercise 1.4
@@ -124,21 +117,15 @@ Alyssa P. Hacker doesn't see why if needs to be provided as a special form. “W
 
 #+end_src
 
-#+RESULTS:
-: #<unspecified>
-
 Eva demonstrates the program for Alyssa:
 
 #+begin_src scheme
-  (new-if (= 2 3) 0 5)
-  5
+(new-if (= 2 3) 0 5)
+5
 
-  (new-if (= 1 1) 0 5)
-  0
+(new-if (= 1 1) 0 5)
+0
 #+end_src
-
-#+RESULTS:
-: 0
 
 Delighted, Alyssa uses new-if to rewrite the square-root program:
 
@@ -149,9 +136,6 @@ Delighted, Alyssa uses new-if to rewrite the square-root program:
           (sqrt-iter (improve guess x) x)))
 #+end_src
 
-#+RESULTS:
-: #<unspecified>
-
 What happens when Alyssa attempts to use this to compute square roots? Explain.
 
 ** Solution
@@ -161,7 +145,7 @@ As new-if is a regular procedure, so, it's arguments get evaluated first and tha
 The good-enough? test used in computing square roots will not be very effective for finding the square roots of very small numbers. Also, in real computers, arithmetic operations are almost always performed with limited precision. This makes our test inadequate for very large numbers. Explain these statements, with examples showing how the test fails for small and large numbers. An alternative strategy for implementing good-enough? is to watch how guess changes from one iteration to the next and to stop when the change is a very small fraction of the guess. Design a square-root procedure that uses this kind of end test. Does this work better for small and large numbers?
 
 ** Solution
-#+begin_src scheme :session :results output
+#+begin_src scheme
 (define (good-enough? last-guess guess)
   (< (abs (- 1 (/ last-guess guess))) 0.001))
 
@@ -176,12 +160,14 @@ The good-enough? test used in computing square roots will not be very effective 
 (define (sqrt x)
   (sqrt-iter x 0.0 1.0))
 
-(assert-approximation 100000.0 (sqrt 10000000000.0))
-(display "Ok!")
+(test-begin "1.7 - iterative sqrt")
+(test-approximate 100000.0 (sqrt 10000000000.0) 0.001)
+(test-end)
+
 #+end_src
 
 #+RESULTS:
-: Ok!
+:  Ok: 1 tests passed.
 
 
 * Exercise 1.8
@@ -194,7 +180,7 @@ Newton’s method for cube roots is based on the fact that if y is an approximat
 Use this formula to implement a cube-root procedure analogous to the square-root procedure. (In 1.3.4 we will see how to implement Newton’s method in general as an abstraction of these square-root and cube-root procedures.)
 
 ** Solution
-#+begin_src scheme :session :results output
+#+begin_src scheme
 (define (improve-cube-root-guess y x)
   (/ (+ (/ x (* y y)) (* 2 y)) 3))
 
@@ -206,12 +192,13 @@ Use this formula to implement a cube-root procedure analogous to the square-root
 (define (cube-root x)
   (cube-root-iter x 0.0 1.0))
 
-(assert-approximation 3 (cube-root 27))
-(display "Ok!")
+(test-begin "1.8 - iterative cube root")
+(test-approximate 3 (cube-root 27) 0.001)
+(test-end)
 #+end_src
 
 #+RESULTS:
-: Ok!
+:  Ok: 1 tests passed.
 
 * Exercise 1.9
 Each of the following two procedures defines a method for adding two positive integers in terms of the procedures inc, which increments its argument by 1, and dec, which decrements its argument by 1.
@@ -261,7 +248,7 @@ Using the substitution model, illustrate the process generated by each procedure
 
 * Exercise 1.10
 The following procedure computes a mathematical function called Ackermann’s function.
-#+begin_src scheme :session
+#+begin_src scheme
 (define (A x y)
   (cond ((= y 0) 0)
         ((= x 0) (* 2 y))
@@ -281,7 +268,7 @@ What are the values of the following expressions?
 : 65536
 
 Consider the following procedures, where A is the procedure defined above:
-#+begin_src scheme :session
+#+begin_src scheme
   (define (f n) (A 0 n))
   (define (g n) (A 1 n))
   (define (h n) (A 2 n))
@@ -304,7 +291,7 @@ A function f is defined by the rule that f(n)=n if n<3 and f(n)=f(n−1)+2f(n−
 
 ** Solution
 #+name: recursive
-#+begin_src scheme :session :results output
+#+begin_src scheme
 (define (f n)
   (if (< n 3)
       n
@@ -313,20 +300,21 @@ A function f is defined by the rule that f(n)=n if n<3 and f(n)=f(n−1)+2f(n−
        (* 2 (f (- n 2)))
        (* 3 (f (- n 3))))))
 
-(assert-equal 0 (f 0))
-(assert-equal 1 (f 1))
-(assert-equal 2 (f 2))
-(assert-equal 4 (f 3))
-(assert-equal 11 (f 4))
-(assert-equal 25 (f 5))
-(display "Ok!")
+(test-begin "1.11 - recursive")
+(test-equal 0 (f 0))
+(test-equal 1 (f 1))
+(test-equal 2 (f 2))
+(test-equal 4 (f 3))
+(test-equal 11 (f 4))
+(test-equal 25 (f 5))
+(test-end)
 #+end_src
 
 #+RESULTS: recursive
-: Ok!
+:  Ok: 6 tests passed.
 
 #+name: iterative
-#+begin_src scheme :results output
+#+begin_src scheme
 (define (f n)
   (define (f-step n-1 n-2 n-3)
     (+ n-1 (* 2 n-2) (* 3 n-3)))
@@ -338,17 +326,18 @@ A function f is defined by the rule that f(n)=n if n<3 and f(n)=f(n−1)+2f(n−
       n
       (f-iter 2 1 0 (- n 2))))
 
-(assert-equal 0 (f 0))
-(assert-equal 1 (f 1))
-(assert-equal 2 (f 2))
-(assert-equal 4 (f 3))
-(assert-equal 11 (f 4))
-(assert-equal 25 (f 5))
-(display "Ok!")
+(test-begin "1.11 - iterative")
+(test-equal 0 (f 0))
+(test-equal 1 (f 1))
+(test-equal 2 (f 2))
+(test-equal 4 (f 3))
+(test-equal 11 (f 4))
+(test-equal 25 (f 5))
+(test-end)
 #+end_src
 
 #+RESULTS: iterative
-: Ok!
+:  Ok: 6 tests passed.
 
 * Exercise 1.12
 The following pattern of numbers is called Pascal’s triangle.
@@ -362,7 +351,7 @@ The following pattern of numbers is called Pascal’s triangle.
 The numbers at the edge of the triangle are all 1, and each number inside the triangle is the sum of the two numbers above it. Write a procedure that computes elements of Pascal’s triangle by means of a recursive process.
 
 ** Solution
-#+begin_src scheme :results output
+#+begin_src scheme
 (define (pascal-triangle r k)
   (if (or (= r 1) (< k 2) (>= k r))
        1
@@ -370,53 +359,43 @@ The numbers at the edge of the triangle are all 1, and each number inside the tr
         (pascal-triangle (- r 1) (- k 1))
         (pascal-triangle (- r 1) k))))
 
-(assert-equal 6 (pascal-triangle 5 3))
-(display "Ok!")
+(test-begin "1.12 - pascal triangle")
+(test-equal 6 (pascal-triangle 5 3))
+(test-end)
 #+end_src
 
 #+RESULTS:
-: Ok!
+:  Ok: 1 tests passed.
 
-* Scratch
-#+begin_src scheme :session
-(define (fib n)
-  (define (fib-iter a b count)
-    (if (= count 0)
-        b
-        (fib-iter (+ a b) a (- count 1))))
-  (fib-iter 1 0 n))
+* Exercise 1.16
+Design a procedure that evolves an iterative exponentiation process that uses successive squaring and uses a logarithmic number of steps, as does fast-expt. (Hint: Using the observation that $(b^(n/2))^2 = (b^2)^(n/2)$, keep, along with the exponent n and the base b, an additional state variable a, and define the state transformation in such a way that the product ab^n is unchanged from state to state. At the beginning of the process a is taken to be 1, and the answer is given by the value of a at the end of the process. In general, the technique of defining an invariant quantity that remains unchanged from state to state is a powerful way to think about the design of iterative algorithms.)
 
-
-(assert-equal 5 (fib 5))
-#+end_src
-
-#+RESULTS:
-
+** Solution
 #+begin_src scheme
-(define (count-change amount)
-    (cc amount 5))
-  (define (cc amount kinds-of-coins)
-  (cond ((= amount 0) 1)
-        ((or (< amount 0)
-             (= kinds-of-coins 0))
-         0)
-        (else
-         (+ (cc amount (- kinds-of-coins 1))
-            (cc (- amount (first-denomination
-                           kinds-of-coins))
-                kinds-of-coins)))))
+(define (expt b n)
+  (define (even? n) (= 0 (remainder n 2)))
+  (define (expt-iter b n a)
+    (cond ((= n 0) a)
+          ((even? n) (expt-iter (* b b) (/ n 2) a))
+          (else  (expt-iter b (- n 1) (* a b)))))
+  (expt-iter b n 1))
 
-(define (first-denomination kinds-of-coins)
-  (cond ((= kinds-of-coins 1) 1)
-        ((= kinds-of-coins 2) 5)
-        ((= kinds-of-coins 3) 10)
-        ((= kinds-of-coins 4) 25)
-        ((= kinds-of-coins 5) 50)))
-
-(assert-equal 292 (count-change 100))
+(test-begin "1.16 - iterative expt")
+(test-equal 1 (expt 10 0))
+(test-equal 7 (expt 7 1))
+(test-equal 9 (expt 3 2))
+(test-equal 125 (expt 5 3))
+(test-equal 625 (expt 5 4))
+(test-equal 32 (expt 2 5))
+(test-equal 729 (expt 3 6))
+(test-equal 78125 (expt 5 7))
+(test-equal 256 (expt 2 8))
+(test-equal 19683 (expt 3 9))
+(test-end)
 #+end_src
 
 #+RESULTS:
+:  Ok: 10 tests passed.
 
 # Local Variables:
 # eval: (olivetti-mode 1)
