exercises up to 1.22

--- a/chapter-1.org
+++ b/chapter-1.org
@@ -1,5 +1,5 @@
 #+TITLE: Chapter 1 Exercises
-#+PROPERTY: header-args :session :results output
+#+PROPERTY: header-args :results output
 
 * Exercise 1.1
 Below is a sequence of expressions. What is the result printed by the interpreter in response to each expression? Assume that the sequence is to be evaluated in the order in which it is presented.
@@ -88,7 +88,6 @@ Define a procedure that takes three numbers as arguments and returns the sum of 
 #+RESULTS:
 :  Ok: 1 tests passed.
 
-
 * Exercise 1.4
 Observe that our model of evaluation allows for combinations whose operators are compound expressions. Use this observation to describe the behavior of the following procedure:
 
@@ -99,6 +98,28 @@ Observe that our model of evaluation allows for combinations whose operators are
 
 ** Solution
 The result of the if expression is the symbol for the operator applied to a and b, because of applicative-order evaluation.
+
+* Exercise 1.5
+Ben Bitdiddle has invented a test to determine whether the interpreter he is faced with is using applicative-order evaluation or normal-order evaluation. He defines the following two procedures:
+
+#+begin_src scheme :eval never
+(define (p) (p))
+
+(define (test x y)
+  (if (= x 0)
+      0
+      y))
+#+end_src
+
+Then he evaluates the expression
+#+begin_src scheme :eval never
+(test 0 (p))
+#+end_src
+
+What behavior will Ben observe with an interpreter that uses applicative-order evaluation? What behavior will he observe with an interpreter that uses normal-order evaluation? Explain your answer. (Assume that the evaluation rule for the special form if is the same whether the interpreter is using normal or applicative order: The predicate expression is evaluated first, and the result determines whether to evaluate the consequent or the alternative expression.)
+
+** Solution
+For applicative-order evaluation the interpreter will try to solve (p) indefinitely. For normal-order evaluation the result is 0.
 
 * Exercise 1.6
 Alyssa P. Hacker doesn't see why if needs to be provided as a special form. “Why can’t I just define it as an ordinary procedure in terms of cond?” she asks. Alyssa’s friend Eva Lu Ator claims this can indeed be done, and she defines a new version of if:
@@ -164,7 +185,6 @@ The good-enough? test used in computing square roots will not be very effective 
 
 #+RESULTS:
 :  Ok: 1 tests passed.
-
 
 * Exercise 1.8
 Newton’s method for cube roots is based on the fact that if y is an approximation to the cube root of x, then a better approximation is given by the value:
@@ -372,7 +392,7 @@ Design a procedure that evolves an iterative exponentiation process that uses su
           (else  (expt-iter b (- n 1) (* a b)))))
   (expt-iter b n 1))
 
-(test-begin "1.16 - iterative expt")
+(test-begin "1.16 - Iterative exponentiation in O(log2 n) time")
 (test-equal 1 (expt 10 0))
 (test-equal 7 (expt 7 1))
 (test-equal 9 (expt 3 2))
@@ -392,6 +412,241 @@ Design a procedure that evolves an iterative exponentiation process that uses su
 * Exercise 1.17
 The exponentiation algorithms in this section are based on performing exponentiation by means of repeated multiplication. In a similar way, one can perform integer multiplication by means of repeated addition. The following multiplication procedure (in which it is assumed that our language can only add, not multiply) is analogous to the expt procedure:
 
+#+begin_src scheme :eval never
+(define (* a b)
+  (if (= b 0)
+      0
+      (+ a (* a (- b 1)))))
+#+end_src
+
+This algorithm takes a number of steps that is linear in b. Now suppose we include, together with addition, operations double, which doubles an integer, and halve, which divides an (even) integer by 2. Using these, design a multiplication procedure analogous to fast-expt that uses a logarithmic number of steps.
+
+** Solution
+#+begin_src scheme
+(define (even? n) (= 0 (remainder n 2)))
+(define (halve n) (/ n 2))
+(define (multi a b)
+    (cond ((= b 0) 0)
+          ((even? b) (multi (+ a a) (halve b)))
+          (else  (+ a (multi a (- b 1) )))))
+
+(test-begin "1.17 - Recursive multiplication in O(log2 n) time")
+(test-equal 0 (multi 10 0))
+(test-equal 7 (multi 7 1))
+(test-equal 6 (multi 3 2))
+(test-equal 15 (multi 5 3))
+(test-equal 20 (multi 5 4))
+(test-equal 10 (multi 2 5))
+(test-equal 18 (multi 3 6))
+(test-equal 35 (multi 5 7))
+(test-equal 16 (multi 2 8))
+(test-equal 27 (multi 3 9))
+(test-end)
+#+end_src
+
+
+#+RESULTS:
+:  Ok: 10 tests passed.
+
+* Exercise 1.18
+Using the results of Exercise 1.16 and Exercise 1.17, devise a procedure that generates an iterative process for multiplying two integers in terms of adding, doubling, and halving and uses a logarithmic number of steps.
+
+** Solution
+#+begin_src scheme
+(define (multi a b)
+  (define (even? n) (= 0 (remainder n 2)))
+  (define (halve n) (/ n 2))
+  (define (multi-iter a b c)
+    (cond ((= b 0) c)
+          ((even? b) (multi-iter (+ a a) (halve b) c))
+          (else  (multi-iter a (- b 1) (+ c a)))))
+  (multi-iter a b 0))
+
+(test-begin "1.18 - Iterative multiplication in O(log2 n) time")
+(test-equal 0 (multi 10 0))
+(test-equal 7 (multi 7 1))
+(test-equal 6 (multi 3 2))
+(test-equal 15 (multi 5 3))
+(test-equal 20 (multi 5 4))
+(test-equal 10 (multi 2 5))
+(test-equal 18 (multi 3 6))
+(test-equal 35 (multi 5 7))
+(test-equal 16 (multi 2 8))
+(test-equal 27 (multi 3 9))
+(test-end)
+#+end_src
+
+#+RESULTS:
+:  Ok: 10 tests passed.
+
+* Exercise 1.19
+There is a clever algorithm for computing the Fibonacci numbers in a logarithmic number of steps. Recall the transformation of the state variables a and b in the fib-iter process of 1.2.2: a ← a + b and b ← a. Call this transformation T, and observe that applying T over and over again n times, starting with 1 and 0, produces the pair Fib(n + 1) and Fib(n). In other words, the Fibonacci numbers are produced by applying T^n, the nth power of the transformation T, starting with the pair (1, 0). Now consider T to be the special case of p = 0 and q = 1 in a family of transformations T_pq, where T_pq transforms the pair (a, b) according to a ← bq + aq + ap and b ← bp + aq. Show that if we apply such a transformation T_pq twice, the effect is the same as using a single transformation T_p′q′ of the same form, and compute p′ and q′ in terms of p and q. This gives us an explicit way to square these transformations, and thus we can compute T^n using successive squaring, as in the fast-expt procedure. Put this all together to complete the following procedure, which runs in a logarithmic number of steps:
+
+#+begin_src scheme :eval never
+(define (fib n)
+  (fib-iter 1 0 0 1 n))
+
+(define (fib-iter a b p q count)
+  (cond ((= count 0)
+         b)
+        ((even? count)
+         (fib-iter a
+                   b
+                   ⟨??⟩  ;compute p'
+                   ⟨??⟩  ;compute q'
+                   (/ count 2)))
+        (else
+         (fib-iter (+ (* b q)
+                      (* a q)
+                      (* a p))
+                   (+ (* b p)
+                      (* a q))
+                   p
+                   q
+                   (- count 1)))))
+#+end_src
+
+** Solution
+#+begin_src scheme
+(define (fib n)
+  (fib-iter 1 0 0 1 n))
+
+(define (fib-iter a b p q count)
+  (cond ((= count 0) b)
+        ((even? count)
+         (let ((p-squared (* p p))
+               (q-squared (* q q)))
+           (fib-iter a
+                   b
+                   (+ p-squared q-squared)
+                   (+ q-squared (* 2 p q))
+                   (/ count 2))))
+        (else
+         (let ((aq (* a q)))
+           (fib-iter (+ (* b q)
+                        aq
+                        (* a p))
+                     (+ (* b p)
+                        aq)
+                     p
+                     q
+                     (- count 1))))))
+
+(test-begin "1.18 - Iterative Fibonacci calculation in O(log2 n) time")
+(test-equal 1  (fib 1))
+(test-equal 1  (fib 2))
+(test-equal 2  (fib 3))
+(test-equal 3  (fib 4))
+(test-equal 5  (fib 5))
+(test-equal 8  (fib 6))
+(test-equal 13 (fib 7))
+(test-equal 610 (fib 15))
+(test-equal 1548008755920 (fib 60))
+(test-equal 2880067194370816120 (fib 90))
+(test-end)
+#+end_src
+
+#+RESULTS:
+:  Ok: 10 tests passed.
+
+* Exercise 1.20
+The process that a procedure generates is of course dependent on the rules used by the interpreter. As an example, consider the iterative gcd procedure given above. Suppose we were to interpret this procedure using normal-order evaluation, as discussed in 1.1.5. (The normal-order-evaluation rule for if is described in Exercise 1.5.) Using the substitution method (for normal order), illustrate the process generated in evaluating (gcd 206 40) and indicate the remainder operations that are actually performed. How many remainder operations are actually performed in the normal-order evaluation of (gcd 206 40)? In the applicative-order evaluation?
+
+** Solution
+For normal-order evaluation the number of remainder operations executed is 18. For applicative-order evaluation, 4.
+
+* Exercise 1.21
+Use the smallest-divisor procedure to find the smallest divisor of each of the following numbers: 199, 1999, 19999.
+
+** Solution
+> (smallest-divisor 199)
+$1 = 199
+> (smallest-divisor 1999)
+$2 = 1999
+> (smallest-divisor 19999)
+$3 = 7
+
+* Exercise 1.22
+Most Lisp implementations include a primitive called runtime that returns an integer that specifies the amount of time the system has been running (measured, for example, in microseconds). The following timed-prime-test procedure, when called with an integer n, prints n and checks to see if n is prime. If n is prime, the procedure prints three asterisks followed by the amount of time used in performing the test.
+
+#+begin_src scheme :eval never
+(define (timed-prime-test n)
+  (newline)
+  (display n)
+  (start-prime-test n (runtime)))
+
+(define (start-prime-test n start-time)
+  (if (prime? n)
+      (report-prime (- (runtime)
+                       start-time))))
+
+(define (report-prime elapsed-time)
+  (display " *** ")
+  (display elapsed-time))
+#+end_src
+
+Using this procedure, write a procedure search-for-primes that checks the primality of consecutive odd integers in a specified range. Use your procedure to find the three smallest primes larger than 1000; larger than 10,000; larger than 100,000; larger than 1,000,000. Note the time needed to test each prime. Since the testing algorithm has order of growth of Θ(n), you should expect that testing for primes around 10,000 should take about 10 times as long as testing for primes around 1000. Do your timing data bear this out? How well do the data for 100,000 and 1,000,000 support the Θ(n) prediction? Is your result compatible with the notion that programs on your machine run in time proportional to the number of steps required for the computation?
+
+** Solution
+#+begin_src scheme
+(load-from-path "1_22-definitions.scm")
+(define (search-for-primes start)
+  (define (search-for-primes-iter n count)
+    (if (> count 0)
+        (search-for-primes-iter
+         (+ n 2)
+         (if (timed-prime-test n) (- count 1) count))))
+  (search-for-primes-iter
+   (if (even? start) (+ start 1) start)
+   3))
+#+end_src
+
+> (search-for-primes 100000)
+100003 | 71004
+100019 | 69836
+100043 | 69686
+
+> (search-for-primes 1000000)
+1000003 | 413345
+1000033 | 417740
+1000037 | 417630
+
+> (search-for-primes 10000000)
+10000019 | 692164
+10000079 | 673696
+10000103 | 697857
+
+> (search-for-primes 100000000)
+100000007 | 1731865
+100000037 | 1448142
+100000039 | 1630682
+
+Let m be the mean time for the three smallest primes greater than 100000 and T_n to be the measured time (in nanoseconds) to check for primality of n. If m is taken take as the standard computation time for prime test, the deviation, D_n, from the expected computation time is:
+
+D_n = T_n - m*(sqrt(n)/sqrt(100000))
+
+Observed mean:
+m = 70175
+
+|         n | T_n (ns) |           D_n |
+|-----------+----------+---------------|
+|   1000003 |   413345 |     191431.83 |
+|   1000033 |   417740 |     195823.50 |
+|   1000037 |   417630 |     195713.06 |
+|  10000019 |   692164 |    -9586.6667 |
+|  10000079 |   673696 |    -28056.772 |
+|  10000103 |   697857 |    -3896.6140 |
+| 100000007 |  1731865 |    -487263.43 |
+| 100000037 |  1448142 |    -770986.76 |
+| 100000039 |  1630682 |    -588446.78 |
+|-----------+----------+---------------|
+|  Variance |       -- | 137875470000. |
+#+tblfm: $3=$2-70175*(sqrt($1)/sqrt(100000))::@11$3=vvar(@I..@II)
+
+* Exercise 1.23
+* Footer
 # Local Variables:
 # eval: (olivetti-mode 1)
+# eval: (flyspell-mode 1)
+# ispell-local-dictionary: "american"
 # End:
