--- a/chapter-1.org
+++ b/chapter-1.org
@@ -778,6 +778,107 @@ Louis Reasoner is having great difficulty doing Exercise 1.24. His fast-prime? t
 ** Solution
 expmod will be evaluated twice for even exponents nullifying the effect of dividing the exponent by 2. In other words expmod will be evaluated n times.
 
+* Exercise 1.27
+Demonstrate that the Carmichael numbers listed in Footnote 47 really do fool the Fermat test. That is, write a procedure that takes an integer n and tests whether a^n is congruent to a modulo n for every a<n, and try your procedure on the given Carmichael numbers.
+
+** Solution
+#+begin_src scheme
+(define (even? n) (= (remainder n 2) 0))
+(define (square n) (* n n))
+(define (inc n) (+ n 1))
+(define (expmod base exp m)
+  (cond ((= exp 0) 1)
+        ((even? exp)
+         (remainder
+          (square (expmod base (/ exp 2) m))
+          m))
+        (else
+         (remainder
+          (* base (expmod base (- exp 1) m))
+          m))))
+
+(define (exaustive-fermat-test n)
+  (define (exaustive-fermat-test-iter n a)
+    (cond ((= n a) #t)
+          ((= (expmod a n n) a)
+           (exaustive-fermat-test-iter n (inc a)))
+          (else #f)))
+  (exaustive-fermat-test-iter n 1))
+
+(test-begin "1.27 - Charmichael numbers")
+(test-assert (exaustive-fermat-test 561))
+(test-assert (exaustive-fermat-test 1105))
+(test-assert (exaustive-fermat-test 1729))
+(test-assert (exaustive-fermat-test 2465))
+(test-assert (exaustive-fermat-test 2821))
+(test-assert (exaustive-fermat-test 6601))
+(test-end)
+#+end_src
+
+#+RESULTS:
+:  Ok: 6 tests passed.
+
+* Exercise 1.28
+One variant of the Fermat test that cannot be fooled is called the Miller-Rabin test (Miller 1976; Rabin 1980). This starts from an alternate form of Fermat’s Little Theorem, which states that if n is a prime number and a is any positive integer less than n, then a raised to the (n−1)-st power is congruent to 1 modulo n. To test the primality of a number n by the Miller-Rabin test, we pick a random number a<n and raise a to the (n−1)-st power modulo n using the expmod procedure. However, whenever we perform the squaring step in expmod, we check to see if we have discovered a “nontrivial square root of 1 modulo n,” that is, a number not equal to 1 or n−1 whose square is equal to 1 modulo n. It is possible to prove that if such a nontrivial square root of 1 exists, then n is not prime. It is also possible to prove that if n is an odd number that is not prime, then, for at least half the numbers a<n, computing a^(n−1) in this way will reveal a nontrivial square root of 1 modulo n. (This is why the Miller-Rabin test cannot be fooled.) Modify the expmod procedure to signal if it discovers a nontrivial square root of 1, and use this to implement the Miller-Rabin test with a procedure analogous to fermat-test. Check your procedure by testing various known primes and non-primes. Hint: One convenient way to make expmod signal is to have it return 0.
+
+** Solution
+#+begin_src scheme
+(define (even? n) (= (remainder n 2) 0))
+(define (square n) (* n n))
+(define (guess-a n)
+  (+ 1 (random (- n 1))))
+
+(define (check-non-trivial-sqrt-mod x n m)
+  (if (and
+       (= x 1)
+       (not (= n 1))
+       (not (= n (- m 1))))
+      0
+      x))
+
+(define (sqrmod-check n m)
+  (check-non-trivial-sqrt-mod (remainder (square n) m) n m))
+
+(define (expmod base exp m)
+  (cond ((= exp 0) 1)
+        ((even? exp)
+         (sqrmod-check (expmod base (/ exp 2) m) m))
+        (else
+         (remainder
+          (* base (expmod base (- exp 1) m))
+          m))))
+
+(define (miller-rabin-test n)
+  (= 1 (expmod (guess-a n) (- n 1) n)))
+
+(test-begin "1.28 - Miller-Rabin test")
+(test-assert (miller-rabin-test 11))
+(test-assert (miller-rabin-test 23))
+(test-assert (miller-rabin-test 100003))
+(test-assert (miller-rabin-test 100019))
+(test-assert (miller-rabin-test 100043))
+(test-assert (miller-rabin-test 1000003))
+(test-assert (miller-rabin-test 1000033))
+(test-assert (miller-rabin-test 1000037))
+(test-assert (miller-rabin-test 10000019))
+(test-assert (miller-rabin-test 10000079))
+(test-assert (miller-rabin-test 10000103))
+(test-assert (miller-rabin-test 100000007))
+(test-assert (miller-rabin-test 100000037))
+(test-assert (miller-rabin-test 100000039))
+(test-assert (not (miller-rabin-test 561)))
+(test-assert (not (miller-rabin-test 1105)))
+(test-assert (not (miller-rabin-test 1729)))
+(test-assert (not (miller-rabin-test 2465)))
+(test-assert (not (miller-rabin-test 2821)))
+(test-assert (not (miller-rabin-test 6601)))
+(test-end)
+#+end_src
+
+#+RESULTS:
+:  Ok: 20 tests passed.
+
+
 * Footer
 # Local Variables:
 # eval: (olivetti-mode 1)
