--- a/chapter-1.org
+++ b/chapter-1.org
@@ -878,6 +878,18 @@ One variant of the Fermat test that cannot be fooled is called the Miller-Rabin 
 #+RESULTS:
 :  Ok: 20 tests passed.
 
+* Exercise 1.30
+The sum procedure above generates a linear recursion. The procedure can be rewritten so that the sum is performed iteratively. Show how to do this by filling in the missing expressions in the following definition:
+
+** Solution
+#+begin_src scheme
+(define (sum term a next b)
+  (define (iter a result)
+    (if (> a b)
+        result
+        (iter (next a) (+ result (term a)))))
+  (iter a 0))
+#+end_src
 
 * Footer
 # Local Variables:
