--- a/chapter-1.org
+++ b/chapter-1.org
@@ -1,6 +1,4 @@
 #+TITLE: Chapter 1 Exercises
-#+PROPERTY: header-args :results output
-#+OPTIONS: todo:nil toc:nil num:nil
 
 * Exercise 1.1
 Below is a sequence of expressions. What is the result printed by the interpreter in response to each expression? Assume that the sequence is to be evaluated in the order in which it is presented.
@@ -1069,11 +1067,11 @@ Simpson’s Rule is a more accurate method of numerical integration than the met
 
 ** Solution
 #+begin_src scheme
-(define (sum term a b next)
+(define (sum term a next b)
   (if (> a b)
       0
       (+ (term a)
-         (sum term (next a) b next))))
+         (sum term (next a) next b))))
 
 (define (inc n) (+ n 1))
 
@@ -1081,7 +1079,7 @@ Simpson’s Rule is a more accurate method of numerical integration than the met
   (define h (/ (- b a) n))
   (define (y k) (f (+ a (* k h))))
   (define (term k) (* (y k) (+ 2 (* 2 (remainder k 2)))))
-  (* (/ h 3) (+ (y 0) (y n) (sum term 1 (- n 1) inc))))
+  (* (/ h 3) (+ (y 0) (y n) (sum term 1 inc (- n 1)))))
 
 (define (cube x) (* x x x))
 
@@ -1116,7 +1114,129 @@ The sum procedure above generates a linear recursion. The procedure can be rewri
   (iter a 0))
 #+end_src
 
-* Footer :noexport:
+* Exercise 1.31
+1. The sum procedure is only the simplest of a vast number of similar abstractions that can be captured as higher-order procedures.51 Write an analogous procedure called product that returns the product of the values of a function at points over a given range. Show how to define factorial in terms of product. Also use product to compute approximations to π using the formula
+
+\[
+\frac{\pi}{4} =
+\frac{2 \cdot 4 \cdot 4 \cdot 6 \cdot 6 \cdot 8 \cdot \cdots}
+     {3 \cdot 3 \cdot 5 \cdot 5 \cdot 7 \cdot 7 \cdot \cdots}.
+\]
+
+2. If your product procedure generates a recursive process, write one that generates an iterative process. If it generates an iterative process, write one that generates a recursive process.
+
+** Solution
+
+Pi approximation
+#+begin_src scheme
+(define (product term a next b)
+  (if (> a b)
+      1
+      (* (term a)
+         (product term (next a) next b))))
+
+(define (pi-approx n)
+  (define (inc n) (+ n 1))
+  (define (term n)
+    (define n+1 (+ n 1.0))
+    (/
+     (+ n+1 (remainder n+1 2))
+     (+ n+1 (remainder n 2))))
+  (* 4 (product term 1 inc n)))
+#+end_src
+
+#+begin_src scheme
+(define (product term a next b)
+  (define (iter a result)
+    (if (> a b)
+        result
+        (iter (next a) (* result (term a)))))
+  (iter a 1))
+
+(define (pi-approx n)
+  (define (inc n) (+ n 1))
+  (define (term n)
+    (define n+1 (+ n 1.0))
+    (/
+     (+ n+1 (remainder n+1 2))
+     (+ n+1 (remainder n 2))))
+  (* 4 (product term 1 inc n)))
+
+(display (pi-approx 10000))
+#+end_src
+
+* Exercise 1.32
+1. Show that sum and product (Exercise 1.31) are both special cases of a still more general notion called accumulate that combines a collection of terms, using some general accumulation function:
+#+begin_src scheme :eval never
+(accumulate
+ combiner null-value term a next b)
+#+end_src
+Accumulate takes as arguments the same term and range specifications as sum and product, together with a combiner procedure (of two arguments) that specifies how the current term is to be combined with the accumulation of the preceding terms and a null-value that specifies what base value to use when the terms run out. Write accumulate and show how sum and product can both be defined as simple calls to accumulate.
+
+2. If your accumulate procedure generates a recursive process, write one that generates an iterative process. If it generates an iterative process, write one that generates a recursive process.
+
+** Solution
+#+begin_src scheme
+(define (accumulate combiner null-value term a next b)
+  (if (> a b)
+      null-value
+      (combiner
+       (term a)
+       (accumulate combiner null-value term (next a) next b))))
+
+(define (product term a next b)
+  (accumulate * 1 term a next b))
+(define (sum term a next b)
+  (accumulate + 0 term a next b))
+
+(define (identity x) x)
+(define (inc n) (+ n 1))
+(define (factorial n)
+  (product identity 1 inc n))
+(define (sum-of-naturals n)
+  (sum identity 1 inc n))
+
+(test-begin "1.32 - Recursive Accumulate")
+(test-equal 120 (factorial 5))
+(test-equal 15  (sum-of-naturals 5))
+(test-end)
+#+end_src
+
+#+RESULTS:
+:  Ok: 2 tests passed.
+
+#+begin_src scheme
+(define (accumulate combiner null-value term a next b)
+  (define (iter a result)
+    (if (> a b)
+        result
+        (iter (next a) (combiner result (term a)))))
+  (iter a null-value))
+
+(define (product term a next b)
+  (accumulate * 1 term a next b))
+(define (sum term a next b)
+  (accumulate + 0 term a next b))
+
+(define (identity x) x)
+(define (inc n) (+ n 1))
+(define (factorial n)
+  (product identity 1 inc n))
+(define (sum-of-naturals n)
+  (sum identity 1 inc n))
+
+(test-begin "1.32 - Iterative Accumulate")
+(test-equal 120 (factorial 5))
+(test-equal 15  (sum-of-naturals 5))
+(test-end)
+#+end_src
+
+#+RESULTS:
+:  Ok: 2 tests passed.
+
+* meta                                                            :noexport:
+#+PROPERTY: header-args :results output
+#+OPTIONS: todo:nil toc:nil num:nil
 #+HTML_HEAD_EXTRA: <style> img { width: 100% }</style>
 # Local Variables:
 # eval: (olivetti-mode 1)
