--- a/chapter-1.org
+++ b/chapter-1.org
@@ -1270,6 +1270,25 @@ You can obtain an even more general version of accumulate (Exercise 1.32) by int
 #+RESULTS:
 :  Ok: 2 tests passed.
 
+* Exercise 1.34
+Exercise 1.34: Suppose we define the procedure
+#+begin_src scheme :eval never
+(define (f g) (g 2))
+#+end_src
+Then we have
+#+begin_example
+(f square)
+4
+
+(f (lambda (z) (* z (+ z 1))))
+6
+#+end_example
+What happens if we (perversely) ask the interpreter to evaluate the combination (f f)? Explain.
+
+** Solution
+It will expand to (2 2) and raise an error trying to execute 2 as a procedure.
+
+
 * meta                                                            :noexport:
 #+PROPERTY: header-args :results output
 #+OPTIONS: todo:nil toc:nil num:nil
